# tri-net

./: .gitignore  .t27-allowlist  .t27c-version  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SOUL.md  build.rs  lefthook.yml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
bench/: gen_time_summary_2026-07-05.csv  gen_time_summary_2026-07-05.json
docs/: A2_RATCHET_2_SYNTH.md  AGENT_ONBOARDING.md  AGENT_ORDERS_2026-07-03.md  AGENT_ORDERS_2026-07-04-v3.md  AGENT_ORDERS_2026-07-04.md  AGENT_STATUS_CLOUD.md  AUTONOMOUS.md  BENCHMARK_VS_MANET_2026-07-04.md  BOOTSTRAP_OPERATOR_PROGRAM.md  COMPETITOR_MATRIX_2026-07-04.md  COMPETITOR_WATCH_SPEC.md  COMPREHENSIVE_INTEGRATION_REPORT.md  COMPUTE_INTERIM_ATTESTATION.md  E1_1_IPHONE_TOPOLOGY.md  EXECUTION_PLAN_2026-07-11.md  FEC_PIPELINE.md  FEC_VERIFICATION.md  FPGA_UTILIZATION_AND_COMPETITORS.md  FULL_PROJECT_CONTEXT.md  HANDOFF.md  IMAGE_BAKE_MILESTONE.md  INTERNET_CALLING.md  ITERATION_LOG.md  LOCAL_FLASH.md  M2_M4_FPGA_DECOMPOSED_PLAN.md  M2_MESH_RESULTS.md  M2_PREP_PURE_LOGIC.md  MASTER_ROADMAP_COMPLETE.md  MASTER_ROADMAP_W15_W20.md  MERGE_ORDER.md  MERGE_RUNBOOK.md  MULTI_DEVICE_IDENTITY.md  NICKNAME_DIRECTORY.md  PAPER_DELTA_v0.md  PIPELINE.md  PLAIN_REPORT.html  PROOF_OF_FPGA_WHITEPAPER_v0.md  PUF_VENDOR_OUTREACH_v0.md  REGULATORY_STATUS.md  ROUTING_METRIC.md  (+58 more)
phone/: BRANDBOOK.md  BRANDBOOK_uikit.html  FINAL_REPORT_V2.md  FULL_REPORT.md  OPTIONS.md  PLAN.md  REPORT.md  SCREEN_SHARE_iOS.md  UX_CONCEPT.md  VIDEO_CALL_DEBUG_REPORT_2026-07-16.md  WAVE_REPORT.md  WAVE_REPORT_v0.10_2026-07-17.md  WAVE_REPORT_v0.11_2026-07-17.md  WAVE_REPORT_v0.2_2026-07-16.md  WAVE_REPORT_v0.3_ABC_2026-07-16.md  WAVE_REPORT_v0.5_2026-07-17.md  WAVE_REPORT_v0.6_2026-07-17.md  WAVE_REPORT_v0.7_2026-07-17.md  WAVE_REPORT_v0.8_2026-07-17.md  WAVE_REPORT_v0.9_2026-07-17.md  project.yml
radio/: README.md  ad9361_loopback.sh  analyze_tone.py
scripts/: gen_gf16_vectors.py  verify.sh
services/call-api/: .gitignore  Cargo.toml  Dockerfile  README.md
services/call-api/src/: main.rs
smoke/: ADAPTIVE_MCS_RESULTS.md  ADAPTIVE_MCS_WIRE_RESULTS.md  CHANNEL_P_PHOTO_RESULTS.md  CHANNEL_V_STREAMING_RESULTS.md  CHANNEL_V_VIDEO_RESULTS.md  CHAT_CRYPTO_AUDIT_RESULTS.md  CHAT_CRYPTO_SOLO_REVIEW.md  CHAT_GROUP_SEALED_REVIEW.md  CHAT_PADDING_SUITE_PQ_REVIEW.md  CHAT_REAUDIT_RESPONDER_UKS.md  CSMA_MESH_RESULTS.md  (+99 more)
tools/: e2e  (+16 more)
tools/ternclass/: Cargo.toml
tools/ternclass/src/: lm2_w.rs  lm_w.rs  main.rs  weights.rs  xfmr_w.rs
(+461 files in other folders)
