[package]
name = "trinet-call-api"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "TRI-NET signed nickname directory and Internet call signaling adapter."

[dependencies]
axum = "0.8"
base64 = "0.22"
hmac = "0.12"
p256 = { version = "0.13", features = ["ecdsa"] }
rand_core = { version = "0.6", features = ["getrandom"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
